# GA

./: .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
examples/: sample_input.json
src/assignment/: main.py  models.py  solver.py
src/assignment/genetic/: chromosome.py  fitness.py  operators.py  population.py
