[project]
name = "ga-assignment-solver"
version = "0.1.0"
description = "Genetic Algorithm for student-group assignment"
readme = "README.md"
authors = [
    { name = "hz3BbEGw", email = "olekmasojc1@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assignment"]
